# PySynthRender

./: CMakeLists.txt  LICENSE  README.md
configuration/: root_directory.h
include/: SynthRenderer.h  camera.h  mesh.h  model.h
shaders/: fragment_flat_texture.glsl  fragment_light.glsl  fragment_uniform.glsl  vertex_project.glsl  vertex_texture_passthrough.glsl
src/: PythonWrapper.cpp  QuickHull.cpp  SynthRenderer.cpp
